# 1

./: README.md  pyproject.toml
configs/: profile_rules.yaml  similarity.yaml  trait_schema.yaml  vector_schema.yaml  weights_default.yaml
docs/: algorithms.md  configs.md  data_structures.md  interfaces.md  workflow.md
examples/: demo_data.csv  demo_weights.yaml
examples/demo_profiles/: profile_v001.json  profile_v010.json
scripts/: checklist.py  gen_docs.py  preview_profiles.py  run_overview.py  validate_inputs.py
src/flower_trait_modeling/: cli.py
src/flower_trait_modeling/analysis/: auditor.py
src/flower_trait_modeling/app/: diagnostics.py  service.py  workflow.py
src/flower_trait_modeling/domain/: enums.py  models.py
src/flower_trait_modeling/evaluation/: benchmarks_stub.py  metrics.py  report.py
src/flower_trait_modeling/feature_engineering/: encoders.py  scaler.py  validators.py  vector_builder.py  vector_schema.py
tests/: test_auditor.py  test_cache.py  test_checks.py  test_cli.py  test_diagnostics.py  test_dictionaries.py  test_evaluation_metrics.py  test_evaluation_report.py  test_ingestion.py  test_ingestion_reporters.py  test_normalization.py  test_normalization_reporters.py  test_policies.py  test_profile_generator.py  test_profile_report.py  test_reporting_summary.py  test_retrieval.py  test_scaler.py  test_similarity_engine.py  test_similarity_strategies.py  test_specs.py  test_storage_file.py  test_synthetic.py  test_vector_builder.py  test_vector_schema.py  test_vector_validators.py  test_weights.py  test_workflow.py
(+36 files in other folders)
