[project]
name = "flower_trait_modeling"
version = "0.1.0"
description = "鲜花品种性状参数建模系统"
authors = [{ name = "SoftCopyright Team" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["flower", "traits", "similarity", "profiling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
]

[project.urls]
Homepage = "https://example.com/flower_trait_modeling"

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"
